--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "A library to calculate and set rem automatically.",
   "repository": {
-  	"type": "git",
-  	"url": "https://github.com/403177368/remarc.git"
+    "type": "git",
+    "url": "https://github.com/403177368/remarc.git"
   },
   "main": "dist/remarc.common.js",
   "scripts": {
@@ -13,7 +13,11 @@
   "author": "Bruce Chao",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
     "rollup": "^2.7.2",
-    "rollup-plugin-typescript2": "^0.27.1"
+    "rollup-plugin-typescript2": "^0.27.1",
+    "typescript": "^3.9.7"
   }
 }
