--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
+    "eslint-config-airbnb-typescript": "^9.0.0",
     "rollup": "^2.7.2",
     "rollup-plugin-typescript2": "^0.27.1",
     "typescript": "^3.9.7"
